update rating CRUD, product seed